# workshop_df14_depot

./: .gitignore  CMakeLists.txt  run_linux.sh  run_wdw.ps1
.github/: ci-build.yml
ai/docs/en/: index.md
ai/docs/fr/: index.md  quickstart.md
ai/docs/fr/plateforme/Gestion des candidats/: tier-temps.md
ai/docs/fr/plateforme/Gestion des épreuves/: index.md
ai/docs/fr/plateforme/configuration/information/: index.md
ai/docs/fr/plateforme/mon compte/: index.md
ai/docs/unzip/all_docs.zip/docs/fr/plateforme/Connexion/: index.md
ai/docs/unzip/all_docs.zip/docs/fr/plateforme/configuration/catégories/: index.md
ai/docs/unzip/all_docs.zip/docs/fr/plateforme/configuration/promotions/: index.md
ai/docs/unzip/all_docs.zip/docs/fr/plateforme/configuration/session/: index.md
ai/docs/unzip/all_docs.zip/docs/fr/plateforme/configuration/sécurité/: index.md
ai/metadata/: docs.metas
ai_2/docs/es/: index.md
ai_2/docs/fr/: changelog.md
ai_2/docs/fr/plateforme/Gestion des candidats/: index.md
ai_2/docs/fr/plateforme/Gestion des utilisateurs/: index.md
ai_2/docs/fr/plateforme/configuration/: index.md
ai_2/docs/fr/plateforme/configuration/licence/: index.md
ai_2/docs/fr/plateforme/navigation/: index.md
ai_2/docs/fr/plateforme/tableau de bord/: index.md
docs/: Medecine Generale.csv  corection tp architecture.html  response_1759312481200.json  xm.drawio.xml
src/: CMakeLists.txt  main.cpp
workshop_uploader/: CMakeLists.txt  run_linux.sh  run_wdw.ps1  toolchain-mingw64.cmake
workshop_uploader/src/: GitUploader.cpp  GitUploader.h  MainWindow.cpp  MainWindow.h
